2005-11-02  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-art.el (gnus-article-treat-custom): Add `first'.
	(gnus-treat-*): Add `first' in all doc strings.

	* gnus-group.el (gnus-group-compact-group): Fix typo.

2005-11-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-parameters-case-fold-search): New variable.
	(gnus-parameters-get-parameter): Use it.

	* gnus-score.el (gnus-home-score-file): Doc fix.

2005-11-01  Xavier Maillard  <zedek@gnu-rox.org>  (tiny change)

	* gnus-score.el (gnus-update-score-entry-dates): Doc fix.

2005-10-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mm-util.el (mm-special-display-p): New function.

	* mml.el (mml-preview): Use it; doc fix.

2005-10-29  Romain Francoise  <romain@orebokech.com>

	* message.el (message-fix-before-sending): Fix comment.

2005-10-29  Jari Aalto  <jari.aalto@cante.net>

	* gnus-sum.el (gnus-article-sort-by-date-reverse): New function.

2005-10-29  Jari Aalto  <jari.aalto@cante.net>

	* score-mode.el (gnus-score-edit-done-hook): Introduce variable.
	Used in gnus-score.el.

2005-10-28  Reiner Steib  <Reiner.Steib@gmx.de>

	* mm-util.el (mm-codepage-setup): Remove bogus alias test.

2005-10-27  Reiner Steib  <Reiner.Steib@gmx.de>

	* flow-fill.el (fill-flowed-encode-tests): Restore trailing
	whitespace removed in revision 7.8.  Use concatenated string to
	protect trailing whitespace.

2005-10-27  Jouni K Seppanen <jks@iki.fi>  (tiny change)

	* nnimap.el (nnimap-search-uids-not-since-is-evil): Add variable.
	(nnimap-request-expire-articles): Use it to avoid sending 'UID
	SEARCH UID ... NOT SINCE' queries, for inefficient servers like
	Courier IMAP ("some version from 2004").  Mostly based on similar
	code in the same function.

2005-10-26  Didier Verna  <didier@xemacs.org>

	* gnus-group.el (gnus-group-compact-group): invalidate original
	article buffer.
	* gnus-srvr.el (gnus-server-compact-server): ditto.
	* nnml.el (nnml-request-compact-group): handle self Xref: field in